WAM-Studio-SF-Build/force-app/main/default/objects/Meeting_Summary__c/Meeting_Summary__c.object-meta.xml
<CustomObject>
    <description>AI summary and action items from a client meeting/interaction. Part of Salesforce Wealth AI Studio.</description>
    <label>Meeting Summary</label>
    <nameField>
        <displayFormat>MTG-{00000}</displayFormat>
        <label>Meeting Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>