WAM-Studio-SF-Build/force-app/main/default/objects/Meeting_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Summaries</relationshipLabel>
    <relationshipName>Meeting_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>