WAM-Studio-SF-Build/force-app/main/default/objects/Meeting_Summary__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <label>Interaction</label>
    <referenceTo>Interaction</referenceTo>
    <relationshipLabel>Meeting Summaries</relationshipLabel>
    <relationshipName>Meeting_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>